# gbdes

./: .gitignore  AUDIT  Accum.cpp  Accum.h  ApplyWCS.cpp  CMakeLists.txt  DECamInfo.cpp  DECamInfo.h  DrawAstro.cpp  DrawFlat.cpp  DrawFlat2.cpp  DrawPhoto.cpp  DrawRegnault.cpp  ExtensionAttribute.cpp  ExtensionAttribute.h  FITSTable.h  FitDefaulted.cpp  FitSubroutines.cpp  FitSubroutines.h  FitsGlue.cpp  FoF.h  Instrument.h  MagColor.cpp  MakeColors.cpp  Makefile  Makefile.blanco  MapDegeneracies.cpp  MapDegeneracies.h  MapFit.cpp  Match.cpp  Match.h  Photo2DESDM.cpp  PhotoFit.cpp  PhotoSubs.cpp  PhotoSubs.h  PixelMapCollection.py  README.md  ReadPhotoPriors.cpp  SCAMPMap.cpp  SCAMPMap.h  (+22 more)
analysis/: allAstrometricCovariance.py  astroeb.py  astroplots.py  forAustin.py  photoplots.py  run_covariance.py
astrometry/: AUDITS  Astrometry.cpp  Astrometry.h  Astrometry.tex  CMakeLists.txt  CompoundMap.cpp  CompoundMap.h  Ephemeris.cpp  Ephemeris.h  JPL.h  LeapSeconds.h  Makefile  PixelMap.cpp  PixelMap.h  PixelMap.tex  PixelMapCollection.cpp  PixelMapCollection.h  PolyMap.cpp  PolyMap.h  README.md  SerializeProjection.cpp  SerializeProjection.h  SubMap.cpp  TODO  TemplateMap.cpp  TemplateMap.h  Wcs.cpp  Wcs.h  aeiderivs.cpp
astrometry/doc/: Astrometry.tex  PixelMap.tex
astrometry/include/: Astrometry.h  LeapSeconds.h  PiecewiseMap.h  PixelMap.h  PixelMapCollection.h  PolyMap.h  TemplateMap.h  Wcs.h  YAMLCollector.h
astrometry/src/: Astrometry.cpp  CMakeLists.txt  PiecewiseMap.cpp  PixelMap.cpp  PixelMapCollection.cpp  PolyMap.cpp  SubMap.cpp  TemplateMap.cpp  Wcs.cpp  YAMLCollector.cpp
astrometry/testdata/: dummy.yaml
astrometry/tests/: testCollector.cpp  testPMWrite.cpp  testSphericalYAML.cpp
config/: sample.yaml
gbdes/: buildwcs.py
gbfits/: CMakeLists.txt  FITS.cpp  FITS.h  FTable.cpp  FTable.h  FTable2.h  FTableExpression.cpp  FitsImage.cpp  FitsImage.h  FitsTable.cpp  Hdu.cpp  Header.cpp  HeaderFromStream.cpp  HeaderFromStream.h  Image.cpp  Image.h  Image2.h  ImageAlgorithms.h  Makefile  README.md
gbutil/: CMakeLists.txt  Makefile  README.md  setup.py
gbutil/gbutil/: __init__.py  _version.py  clippedMean.py  gaia.py  utilities.py
gbutil/gbutil/decam/: __init__.py  decamTrig.py  decamUtils.py  epochFinder.py
gbutil/include/: AndersonDarling.h  Array.h  Array3d.h  AstronomicalConstants.h  BinomFact.h  Bounds.h  Brent.h  Expressions2.h  Function1d.h  Interpolant.h  Legendre.h  LinearAlgebra.h  Lookup1d.h  Marquardt.h  NameIndex.h  Poisson.h  Poly2d.h  Pset.h  Random.h  Shear.h  Simpson.h  Solve.h  Statistics.h  Std.h  Stopwatch.h  StringStuff.h  SymmetricUpdater.h  Table.h  fft.h  odeint.h
gbutil/src/: BinomFact.cpp  CMakeLists.txt  Expressions.cpp  Interpolant.cpp  Lookup1d.cpp  Poisson.cpp  Poly2d.cpp  Pset.cpp  Shear.cpp  StringStuff.cpp  Table.cpp  fft.cpp  odeint.cpp
gbutil/tests/: testMarquardt.cpp  test_lookup.cpp
images/: FITS.cpp  FITS.h  FITSImage.cpp  FITSImage.h  FITSTable.cpp  FITSTable.h  FITStypes.h  FTable.cpp  FTable.h  FTable2.h  FTableExpression.cpp  FitsImage.cpp  FitsImage.h  FitsTable.cpp  FitsTypes.h  Hdu.cpp  Hdu.h  Header.cpp  Header.h  HeaderFromStream.h  Image.cpp  Image.h  Image2.h  Makefile
include/: Accum.h  DECamInfo.h  ExtensionAttribute.h  FitSubroutines.h  FoF.h  Instrument.h  MapDegeneracies.h  Match.h  PhotoMatch.h  ReadLdacHeader.h  TPVMap.h  Units.h  WCSFitRoutine.h  WCSFit_fit.h  WCSFoFRoutine.h  WCSFoF_match.h  WcsSubs.h
photometry/: CMakeLists.txt  Makefile  PhotoInstrument.h  PhotoMap.cpp  PhotoMap.h  PhotoMapCollection.cpp  PhotoMapCollection.h  PhotoMatch.cpp  PhotoMatch.h  PhotoPrior.cpp  PhotoTemplate.cpp  PhotoTemplate.h  README.md  SubMap.cpp
photometry/doc/: PhotoMap.tex
photometry/include/: PhotoMap.h  PhotoMapCollection.h  PhotoPiecewise.h  PhotoTemplate.h
photometry/src/: CMakeLists.txt  PhotoMap.cpp  PhotoMapCollection.cpp  PhotoPiecewise.cpp  PhotoTemplate.cpp  SubMap.cpp
photometry/tests/: testTemplate.cpp
pydir/: CMakeLists.txt  wcsfit.cpp  wcsfit2.cpp
setups/decam/: README  astroedges1.yaml  astrorings4.yaml  photoedges1.yaml  photorings4.yaml
setups/noao/: README  basename.config  frankcat.py  makestarflat.py  nocolor.input.photo  photofit.params  std.config  striprings.py
setups/starflat/: README  allsf.color.wcsfit.params  allsf.guts.astro  allsf.guts.photo  allsf.magcolor2.params  color.input.astro  color.input.photo  magcolor.params  nocolor.input.astro  std.config  wcsfit.params  wcsfof.params
src/: AndresYAML1.cpp  ApplyPhoto.cpp  ApplyWCS.cpp  CMakeLists.txt  CorrectFlat.cpp  DECamMosaic.cpp  DrawAstro.cpp  DrawFlat.cpp  DrawPhoto.cpp  DumpLDACHeader.cpp  ExtensionAttribute.cpp  FitTPV.cpp  FitsGlue.cpp  ListClipped.cpp  MagColor.cpp  Photo2DESDM.cpp  PhotoFit.cpp  PhotoMatch.cpp  PhotoPrior.cpp  TabulatePixmap.cpp  Tpv2Pixmap.cpp  UpdateHeaders.cpp  WCSFit.cpp  WCSFit_exec.cpp  WCSFit_orig.cpp  WCSFoF.cpp  WCSFoF_execOnly.cpp  addObservatory.py  allAstrometricCovariance.py  allfit.py  allsf3.getGuts.py  compresscat.py  configure.py  decamDCR.py  nightlyPrior.py  recenter.py  tpv2pixmap.cpp
src/subs/: Accum.cpp  CMakeLists.txt  DECamInfo.cpp  ExtensionAttribute.cpp  FitSubroutines.cpp  MapDegeneracies.cpp  MapFit.cpp  Match.cpp  PhotoMatch.cpp  PhotoPrior.cpp  PhotoSubs.cpp  ReadPhotoPriors.cpp  TPVMap.cpp  WCSFitRoutine.cpp  WCSFit_fit.cpp  WCSFoFRoutine.cpp  WCSFoF_match.cpp  WcsSubs.cpp
tests/: test.cpp  testDecam.cpp  testFT.cpp  testFT2.cpp  testFT3.cpp  testFT4.cpp  testFT5.cpp  testFT6.cpp  testFT7.cpp  testFT8.cpp  testImage.cpp  testPMWrite.cpp  testPrep.cpp  testRegexBug.cpp  testSerialize.cpp  testTemplateMap.cpp  testYAML.cpp  testmaps.cpp
ups/: eupspkg.cfg.sh  gbdes.table
utilities/: AndersonDarling.h  Array.h  Array3d.h  Brent.h  Expressions.cpp  Expressions.h  Expressions2.h  Function1d.h  Makefile  Marquardt.h  NameIndex.h  Poly2d.cpp  Poly2d.h  Pset.h  Solve.h  Statistics.h  StringStuff.cpp  StringStuff.h  UseTMV.h  fft.cpp  fft.cpp.old  odeint.cpp  odeint.h
